Configure custom domain

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,7 @@ const cv = {
       property="twitter:description"
       content={`CV de ${cv.name}, desarrollador frontend especializado en React, Tailwind y Astro.`}
     />
-    <link rel="canonical" href="http://localhost:4321/" />
+    <link rel="canonical" href="https://chrystian.dev/" />
     <script type="application/ld+json">
       {JSON.stringify({
         "@context": "https://schema.org",
