--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,6 +148,7 @@ const cv = {
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <title>Chrystian Fabian Lozano Ramirez · CV</title>
     <meta
       name="description"
